# pvz_client

./: .coverage  .gitignore  README.md  pyproject.toml
pvz_client/: __init__.py  api_auth.py  api_client.py  api_config.py  config.py  main.py
pvz_client/models/: AuthModel.py  CategoriesOperations.py  HandlingReportModel.py  OwnerModel.py  PartnerPaymentsModel.py  Pvzmodel.py  TransactionDetailModel.py  TransactionModel.py  __init__.py  data_response.txt
tests/: conftest.py  test_api_auth.py  test_api_client.py
tests/test_models/: test_auth_model.py  test_owner_model.py  test_pvz_model.py
